--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "node-sass": "^4.9.2",
     "npm-run-all": "^4.1.3",
     "postcss-cli": "^6.0.0"
+  },
+  "dependencies": {
+    "event-stream": "^3.3.4"
   }
 }
