--- a/package.json
+++ b/package.json
@@ -30,7 +30,5 @@
     "npm-run-all": "^4.1.3",
     "postcss-cli": "^6.0.0"
   },
-  "dependencies": {
-    "event-stream": "^3.3.4"
-  }
+  "dependencies": {}
 }
